[gd_scene load_steps=19 format=3 uid="uid://blkq4rtc0qvgs"]

[ext_resource type="Script" path="res://src/Playground/Playground.gd" id="1_tmfyy"]
[ext_resource type="FontFile" uid="uid://chygow7my3v5g" path="res://Assets/Fonts/NotoSansMyanmar-Regular.ttf" id="2_dg17q"]
[ext_resource type="FontFile" uid="uid://bkjly6r2w700w" path="res://Assets/Fonts/NotoSerifMyanmar-Bold.ttf" id="3_e4sqq"]
[ext_resource type="Script" path="res://src/FollowUpText.gd" id="4_86oy8"]
[ext_resource type="PackedScene" uid="uid://bu35jrqg64j60" path="res://src/Keyboard/keyboard.tscn" id="5_3d5ha"]
[ext_resource type="PackedScene" uid="uid://bulscf8jamb2b" path="res://src/FollowupRichText/follow_up_text_popup.tscn" id="6_vw22j"]
[ext_resource type="Texture2D" uid="uid://5n4mh44uc3c4" path="res://Assets/Icons/audio.png" id="7_4yl2m"]
[ext_resource type="PackedScene" uid="uid://d3rkoaljyut67" path="res://src/MessagePopup/message_popup.tscn" id="7_gemiv"]
[ext_resource type="AudioStream" uid="uid://cdqui2diupr13" path="res://Assets/Sounds/error-sound.mp3" id="8_ylc3d"]
[ext_resource type="AudioStream" uid="uid://bjeu8c6senasm" path="res://Assets/Sounds/correct-sound.mp3" id="9_otsg4"]

[sub_resource type="GDScript" id="GDScript_l4wjf"]
script/source = "extends LineEdit


# Called when the node enters the scene tree for the first time.
func _ready():
	grab_focus()
	EventBus.finished_section.connect(self._finished_section)
	EventBus.message_popup_closed.connect(self._on_message_popup_closed)
	EventBus.lesson_id_loaded.connect(self._on_new_lesson_id_loaded)

	SoundSettings.mute.connect(func(): grab_focus())
	SoundSettings.unmute.connect(func(): grab_focus())

	pass # Replace with function body.


func _finished_section() -> void:
	clear()

func _on_message_popup_closed() -> void:
	grab_focus()

func _on_new_lesson_id_loaded(_lesson_id: int) -> void:
	clear()
"

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x1x83"]
bg_color = Color(0.258824, 0.207843, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c1j48"]
bg_color = Color(0.431373, 0.352941, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_se5ld"]
bg_color = Color(0.145098, 0.113725, 0, 1)

[sub_resource type="GDScript" id="GDScript_r5ri8"]
script/source = "extends Button

func _on_pressed() -> void:
	SceneChanger.change_to_exercise_editor_scene()
	pass # Replace with function body.
"

[sub_resource type="GDScript" id="GDScript_fg15e"]
script/source = "extends TextureButton
var mute : bool = false
@onready var audio = preload(\"res://Assets/Icons/audio.png\")
@onready var audio_mute = preload(\"res://Assets/Icons/audio-mute.png\")

func _ready() -> void:
	SoundSettings.mute.connect(func(): texture_normal = audio_mute)
	SoundSettings.unmute.connect(func(): texture_normal = audio)


func _on_pressed() -> void:
	if mute:
		SoundSettings.unmute.emit()
	else:
		SoundSettings.mute.emit()
	
	mute = not mute # toggle

"

[sub_resource type="GDScript" id="GDScript_7njul"]
script/source = "extends AudioStreamPlayer

var mute : bool = false

func _ready() -> void:
	EventBus.wrong_char_typed.connect(self._on_wrong_char_typed)
	SoundSettings.mute.connect(func(): mute = true)
	SoundSettings.unmute.connect(func(): mute = false)
	

func _on_wrong_char_typed(_c: String):
	if not mute:
		play()
"

[sub_resource type="GDScript" id="GDScript_fjrcb"]
script/source = "extends AudioStreamPlayer

var mute: bool = false

func _ready() -> void:
	EventBus.correct_char_typed.connect(self._on_correct_char_typed)
	SoundSettings.mute.connect(func(): mute = true)
	SoundSettings.unmute.connect(func(): mute = false)
	pass

func _on_correct_char_typed(_c: String):
	if not mute:
		play()
"

[node name="Playground" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tmfyy")

[node name="FollowUpTextPopup" parent="." instance=ExtResource("6_vw22j")]
visible = false
z_index = 1
layout_mode = 1
offset_left = 1061.0
offset_top = -1.0
offset_right = 1061.0
offset_bottom = -1.0

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="FollowUpRichText" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_vertical = 4
theme_override_fonts/normal_font = ExtResource("2_dg17q")
theme_override_fonts/bold_font = ExtResource("3_e4sqq")
theme_override_font_sizes/normal_font_size = 30
theme_override_font_sizes/bold_font_size = 30
bbcode_enabled = true
text = "Hello World မကလာတေ"
shortcut_keys_enabled = false
language = "my_MM"
script = ExtResource("4_86oy8")
current_char_color = Color(0.717647, 0.882353, 0.992157, 1)
current_char_bgcolor = Color(0.184314, 0.301961, 0.376471, 0)

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_dg17q")
theme_override_font_sizes/font_size = 30
context_menu_enabled = false
virtual_keyboard_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
script = SubResource("GDScript_l4wjf")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="StatusLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Status: "

[node name="Status" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Ok"

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Keyboard" parent="MarginContainer/VBoxContainer/HBoxContainer3" instance=ExtResource("5_3d5ha")]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ExerciseEditorBtn" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_x1x83")
theme_override_styles/hover = SubResource("StyleBoxFlat_c1j48")
theme_override_styles/pressed = SubResource("StyleBoxFlat_se5ld")
text = "Exercise Editor"
script = SubResource("GDScript_r5ri8")

[node name="AudioBtn" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture_normal = ExtResource("7_4yl2m")
stretch_mode = 3
script = SubResource("GDScript_fg15e")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 10

[node name="BasicBtn" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
text = "Basic"

[node name="IntermediateBtn" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
text = "Intermediate"

[node name="AdvancedBtn" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
text = "Advance"

[node name="MessagePopup" parent="." instance=ExtResource("7_gemiv")]
layout_mode = 1

[node name="ErrorAudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_ylc3d")
volume_db = -25.0
pitch_scale = 1.2
max_polyphony = 3
script = SubResource("GDScript_7njul")

[node name="CorrectAudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_otsg4")
volume_db = -20.0
max_polyphony = 3
script = SubResource("GDScript_fjrcb")

[connection signal="text_changed" from="MarginContainer/VBoxContainer/LineEdit" to="." method="_on_text_edit_text_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/ExerciseEditorBtn" to="MarginContainer/VBoxContainer/HBoxContainer2/ExerciseEditorBtn" method="_on_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/AudioBtn" to="MarginContainer/VBoxContainer/HBoxContainer2/AudioBtn" method="_on_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer/BasicBtn" to="." method="_on_basic_btn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer/IntermediateBtn" to="." method="_on_intermediate_btn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer/AdvancedBtn" to="." method="_on_advanced_btn_pressed"]
